src/objects/AcctSeed__Billing_Line__c.object
<CustomObject>
    <description>Used to document a specific product or service associated with a billing. The aggregation of multiple billing lines constitute a billing record.</description>
    <fields>
        <fullName>AcctSeed__Billing_Has_Applied_Records__c</fullName>
        <formula>OR(AcctSeed__Billing__r.AcctSeed__Billing_Cash_Receipt_Count__c &gt; 0,  AcctSeed__Billing__r.AcctSeed__Credit_Memo_Applied_Amount__c != 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Has Applied Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <inlineHelpText>Parent record for this line.</inlineHelpText>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Project_Billing_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Comment__c</fullName>
        <inlineHelpText>Comment for display on Billing Line.</inlineHelpText>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Information field for display on the billing.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amt__c</fullName>
        <formula>IF( AcctSeed__List_Price__c=0, 0,AcctSeed__List_Price__c - AcctSeed__Rate__c)</formula>
        <inlineHelpText>List Price - Unit Price.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Pct__c</fullName>
        <formula>IF( AcctSeed__List_Price__c=0, 0, AcctSeed__Discount_Amt__c / AcctSeed__List_Price__c)</formula>
        <inlineHelpText>Discount Amount/List Price.</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for service billings to identify service rendered by an employee.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the expense GL account set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines (Expense GL Account)</relationshipLabel>
        <relationshipName>Billing_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 1)</relationshipLabel>
        <relationshipName>Billing_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Billing_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Billing_Lines4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Hours_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Quantity for Product Pricing, Hours for Service pricing.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the inventory GL account set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Inventory GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines (Inventory GL Account)</relationshipLabel>
        <relationshipName>Billing_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Is_VAT_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Populated via code. Checked if the related Tax Group is an Avalara VAT Reporting tax group.</inlineHelpText>
        <label>Is VAT Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__List_Price__c</fullName>
        <inlineHelpText>Suggested price before discount.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity_Product_Id__c</fullName>
        <inlineHelpText>The Id of the opportunity product this billing line was sourced.</inlineHelpText>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Parent_Status__c</fullName>
        <formula>TEXT(AcctSeed__Billing__r.AcctSeed__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product_Tax_Type__c</fullName>
        <formula>TEXT(AcctSeed__Product__r.AcctSeed__Accounting_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Tax Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product_Unit_Cost__c</fullName>
        <description>Overrides the unit cost set on the product in the posting process if populated.</description>
        <inlineHelpText>Overrides the unit cost set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Product Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Salesforce Products. Drives GL Revenue Account if selected and no Revenue GL Account is selected in the Billing Line. Also drives GL Account Variables on transaction line if no Project Task is selected on the Billing Line.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track a detailed component of Project.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Project_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Typically used to track customer engagements or events.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Rate__c</fullName>
        <inlineHelpText>Product or Service Rate. Up to 6 decimal places.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Billing_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Billing Line</label>
        <referenceTo>AcctSeed__Recurring_Billing_Line__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credit GL Account used to record the transaction in the general ledger.</inlineHelpText>
        <label>Revenue GL Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Revenue</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Rate__c  *  AcctSeed__Hours_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity x Unit Price for the Billing Line</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated based on Sub-Total x Tax Group&apos;s Combined Tax Rate on Billing Line, unless using AvaTax.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If using native tax functionality, this determines the Combined Tax Rate percentage and the tax GL mappings and is used to calculate the Tax Amount.</inlineHelpText>
        <label>Tax Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales and Purchase</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <formula>IF(AcctSeed__Sub_Total__c = 0, 0 ,AcctSeed__Tax_Amount2__c / AcctSeed__Sub_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax rate percentage used to calculate tax amount.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track additional information on Time Card Lines for services billings when more data is required than Project and Project Task. This is a global variable not specific to a single project.</inlineHelpText>
        <label>Time Card Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Time Card Variable 1</value>
            </filterItems>
            <infoMessage>The Accounting Variable must have a Type of &quot;Time Card  Variable 1&quot;.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track additional information on Time Card Lines for services billings when more data is required than Project and Project Task. This is a global variable not specific to a single project.</inlineHelpText>
        <label>Time Card Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Time Card Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (Time Card Variable 2)</relationshipLabel>
        <relationshipName>Billing_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <formula>AcctSeed__Sub_Total__c +  AcctSeed__Tax_Amount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grand Total of the Billing</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscoras__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Entry</label>
        <referenceTo>AcctSeed__Journal_Entry__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outright</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Send Repaired</fullName>
                </value>
                <value>
                    <fullName>Return Core</fullName>
                </value>
                <value>
                    <fullName>Return Part</fullName>
                </value>
                <value>
                    <fullName>Core Repair</fullName>
                </value>
                <value>
                    <fullName>Managed Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscoras__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscoras__Transaction_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Activity</label>
        <referenceTo>inscor__Activity__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Line</label>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Billing Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_must_be_associated_with_customer</fullName>
        <active>false</active>
        <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; AcctSeed__Project__r.AcctSeed__Account__c != AcctSeed__Billing__r.AcctSeed__Customer__c</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project__c</errorDisplayField>
        <errorMessage>The project you have selected is not associated with the customer listed in the billing header. The account (customer) field on this project must be the same as the customer on the billing header.</errorMessage>
    </validationRules>
</CustomObject>